Fix overlay achievements search padding. Fix notes expander button not hiding. Allow full-screen pagelist entries on small notes window to use full width. Fix browser tab text alignment.

--- a/module/legacy/_browser.scss
+++ b/module/legacy/_browser.scss
@@ -195,7 +195,7 @@
   font-size: var(--zehn-size-14) !important;
   line-height: var(--zehn-size-titlebar) !important;
   width: auto !important;
-  flex-shrink: 1 !important;
+  flex: 1 !important;
   min-width: 0 !important;
 }
 
