--- a/module/legacy/_notes.scss
+++ b/module/legacy/_notes.scss
@@ -34,9 +34,9 @@
 }
 
 .PopupFullWindow.GameNotes .DialogContent_InnerWidth:not(._3Sf_ShCtdfWp5P04k2cIgp) {
-  /*padding: 32px 0 0 0 !important;*/
-  padding: 0 !important;
-  margin: 32px 0 0 0 !important;
+  padding: var(--zehn-size-titlebar) 0 0 0 !important;
+  margin: 0 !important;
+  box-sizing: border-box !important;
 }
 
 /* NARROW WINDOW PAGELIST */
@@ -105,6 +105,12 @@
 ._3Sf_ShCtdfWp5P04k2cIgp ._3Sjbkvk647UKKVLX6J7gsW svg {
   float: left !important;
   -webkit-mask-image: var(--zehn-icon-add-list) !important;
+}
+
+@media screen and (max-width: 500px) {
+  ._3LLH_F43MTu6UtG4Z3kudv {
+      display: none !important;
+  }
 }
 
 ._3LLH_F43MTu6UtG4Z3kudv svg[direction="left"] {
@@ -222,6 +228,10 @@ p._3lnqGBzYap-Z2T81XBiBUU {
 ._1AL7l2CN6z-vuLfp1iCLa ._1fu6xumTI1nCY5wc6FG_N2>div {
   flex-grow: 1 !important;
   display: flex !important;
+}
+
+._3Sf_ShCtdfWp5P04k2cIgp ._18QCu-7MTzd51UpVbYysDy ._1-vlriAtKYDViAEunue4VO {
+  max-width: 100% !important;
 }
 
 /* PAGELIST ICON */
