--- a/module/legacy/_overlay.scss
+++ b/module/legacy/_overlay.scss
@@ -703,10 +703,6 @@
 }
 
 /* SEARCH */
-._2HS5QwHZM9rkt-lx6YWlBF {
-  padding: 0 var(--zehn-size-padding-md) !important;
-}
-
 ._2HS5QwHZM9rkt-lx6YWlBF ._1MqIGcIt2RcNHgT09vMWTj {
   min-width: 0 !important;
   flex-shrink: 1 !important;
@@ -820,6 +816,7 @@
   display: flex !important;
   flex-wrap: nowrap !important;
   white-space: nowrap !important;
+  padding: 0 !important;
 }
 
 .OAV6QqJuXaBPRBW9RaPA6 {
